fix(material/api-theme): fix nav items hover/focus contrast
Fix hover and focus indicators on header nav items with sufficient contrast

Fixes #759

--- a/src/app/shared/navbar/_navbar-theme.scss
+++ b/src/app/shared/navbar/_navbar-theme.scss
@@ -13,6 +13,14 @@
 
     .docs-navbar, .docs-navbar-header {
       background: mat.get-color-from-palette($primary);
+
+      & a:hover {
+        background: rgba(0, 0, 0, 0.2);
+      }
+
+      .docs-navbar-header-item-selected {
+        background: rgba(0, 0, 0, 0.2);
+      }
     }
   }
 }
